# multi-agent-assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: calendar_agent.py  email_agent.py  research_agent.py  travel_agent.py
auth/: google_auth.py
core/: config.py  fallback.py  guardrails.py  memory.py  orchestrator.py  rate_limiter.py
tests/: conftest.py  test_guardrails.py  test_memory.py  test_orchestrator.py  test_tools.py
tools/: calendar_tool.py  gmail_tool.py  maps_tool.py  search_tool.py
